5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1667_2324.log
== TEST (2019-04-16 16:09:34) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono==minerva:
	mensagem=(10.7654/0,3479)
else patrono==belatrix
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono==belatrix
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:58) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono==minerva:
	mensagem=(10.7654/0,3479)
else patrono==belatrix:
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono==belatrix:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:45) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0,3479)
else patrono=="belatrix"
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:10) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=float(10.7654/0,3479)
else patrono=="belatrix"
    mensagem=float(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:55) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0,3479)
else patrono=="belatrix"
    mensagem=(10.674/1.789)
print(mensagem.upper())
-- ERROR:
File "XXXX", line 4
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:11) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0,3479)
else 
    patrono=="belatrix"
    mensagem=(10.674/1.789)
print(mensagem.upper())
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:23) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0.3479)
else 
    patrono=="belatrix"
    mensagem=(10.674/1.789)
print(mensagem.upper())
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:34) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0.3479)
else 
    patrono=="belatrix"
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:12) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono="minerva":
	mensagem=(10.7654/0.3479)
else 
    patrono="belatrix"
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if patrono="minerva":
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:55) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono==("minerva"):
	mensagem=(10.7654/0.3479)
else 
    patrono==("belatrix")
    mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:58) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0.3479)
else patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:43) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if=patrono=="minerva":
	mensagem=(10.7654/0.3479)
else=patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if=patrono=="minerva":
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:14) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
if patrono=="minerva":
	mensagem=(10.7654/0.3479)
else 
     patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:34) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
    if patrono=="minerva":
	     mensagem=(10.7654/0.3479)
   else 
     patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:55) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
 if     patrono=="minerva":
	     mensagem=(10.7654/0.3479)
else 
     patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if     patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:58) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
 if patrono=="minerva":
	mensagem=float(10.7654/0.3479)
else 
   patrono=="belatrix"
   mensagem=float(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:48) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
 if   patrono=="minerva":
	   mensagem=float(10.7654/0.3479)
else 
   patrono=="belatrix"
   mensagem=float(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if   patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:55) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
 if   patrono=="minerva":
	   mensagem=float(10.7654/0.3479)
else 
      patrono=="belatrix"
      mensagem=float(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if   patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:24) 
-- CODE:
patrono=input("digite o nome do bruxo: ")
 if  patrono=="minerva":
	  mensagem=float(10.7654/0.3479)
else 
      patrono=="belatrix"
      mensagem=float(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if  patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:02) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
 if  
	patrono=="minerva":
	mensagem=(10.7654/0.3479)
else 
      patrono=="belatrix"
      mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if  
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:12) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
 if  patrono=="minerva":
	mensagem=(10.7654/0.3479)
else 
      patrono=="belatrix"
      mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if  patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:25) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
 if  patrono=="minerva":
	mensagem=(10.7654/0.3479)
else patrono=="belatrix":
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if  patrono=="minerva":
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:45) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if patrono=="minerva":
	mensagem=(10.7654/0.3479)
else patrono=="belatrix":
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else patrono=="belatrix":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:25) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if   (patrono)=="minerva":
	  (mensagem)=(10.7654/0.3479)
else (patrono)=="belatrix":
     (mensagem)=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else (patrono)=="belatrix":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:06) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   patrono=="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:15) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   patrono=="belatrix":
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:23) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   (patrono=="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:53) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
if  (patrono="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   (patrono="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if  (patrono="minerva"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:00) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   (patrono="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if  (patrono="minerva"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:07) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   (patrono="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:11) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else 
   (patrono=="belatrix"):
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:44) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else (patrono=="belatrix"):
      mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else (patrono=="belatrix"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:52) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else(patrono=="belatrix"):
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else(patrono=="belatrix"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:55) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else(patrono=="belatrix")
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else(patrono=="belatrix")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:04) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:21) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	 mensagem=(10.7654/0.3479)
else patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:47) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	  mensagem=(10.7654/0.3479)
else patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else patrono=="belatrix"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:16) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	  mensagem=(10.7654/0.3479)
else 
     patrono=="belatrix"
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:33) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  (patrono=="minerva"):
	  mensagem=(10.7654/0.3479)
else 
     patrono==("belatrix"):
     mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:06) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))

if  patrono=="minerva":
	 mensagem=(10.7654/0.3479)
else 
   patrono=="belatrix":
   mensagem=(10.674/1.789)
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:25) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=float(10.7654/0.3479)
v2=float(10.676/1.789)
if  patrono=="minerva":
	 mensagem=(v1)
else 
   patrono=="belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:38) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if  patrono=="minerva":
	 mensagem=(v1)
else 
   patrono=="belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:12) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if  patrono=="minerva":
	 mensagem=(v1)
else 
   patrono=="belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:23) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else 
   patrono=="belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:04) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono== "minerva":
	mensagem=(v1)
else 
   patrono== "belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:23) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono== "minerva":
	mensagem=(v1)
else: 
   patrono== "belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 7
    patrono== "belatrix":
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:37) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if: patrono== "minerva":
	mensagem=(v1)
else
   patrono== "belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if: patrono== "minerva":
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:42) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono== "minerva":
	mensagem=(v1)
else
   patrono== "belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:52) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono== "minerva":
	mensagem=(v1)
else:
   patrono== "belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 7
    patrono== "belatrix":
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:18) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix":
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 7
    patrono=="belatrix":
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:25) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:57) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:33) 
-- CODE:
patrono=(input(.upper()("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem.upper())
-- ERROR:
File "XXXX", line 1
    patrono=(input(.upper()("digite o nome do bruxo: "))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:38) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:52) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print((mensagem).upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print((mensagem).upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:53) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print str(mensagem.upper())
-- ERROR:
File "XXXX", line 9
    print str(mensagem.upper())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:28) 
-- CODE:
patrono=(input("digite o nome do bruxo: ").upper())
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:32) 
-- CODE:
patrono.upper()=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- ERROR:
File "XXXX", line 1
    patrono.upper()=(input())
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:04) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva".upper():
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:43) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:04) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono=="minerva":
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:49) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono==("minerva".upper()):
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:19) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono==("minerva".upper()):
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:41) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono==("minerva".upper()):
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:55:00) 
-- CODE:
patrono=(input("digite o nome do bruxo: "))
v1=(10.7654/0.3479)
v2=(10.676/1.789)
if patrono==("minerva".upper()):
	mensagem=(v1)
else:
   patrono=="belatrix"
   mensagem=(v2)
print(mensagem)
-- OUTPUT:
5.967579653437675
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
